# workdesk

./: .gitignore  CAPABILITIES.md  README.md  package-lock.json
.github/workflows/: ci.yml
deskwork/: README.md  package-lock.json  package.json
deskwork/public/: landing.css  landing.html
deskwork/src/: ActivityStream.tsx  App.css  App.tsx  FileTree.tsx  RightSidebar.tsx  SettingsModal.tsx
deskwork/src-tauri/: Cargo.toml  deskwork_settings.json  tauri.conf.json
deskwork/src-tauri/.deskwork/sessions/: 3e0be396-c09e-4cf5-bbc8-38970e010ea9.json  53949d11-3297-4957-a740-23d979058e7d.json  9a34c5ba-78c9-4bb5-bea1-1275ae874ffb.json  bf68647d-0e0d-453e-8b91-893f45422d6c.json  ccdda8f1-b54f-4b92-8738-a1136720e109.json
deskwork/src-tauri/src/: agent.rs  audit.rs  commands.rs  context.rs  lib.rs  logging.rs  main.rs  session_manager.rs  settings.rs  skills.rs  templates.rs
