[package]
name = "deskwork"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deskwork_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
tauri-plugin-dialog = "2.6.0"
sysinfo = "0.36.1"
open = "5.3.3"
urlencoding = "2.1.3"
enigo = { version = "0.3.0", features = ["serde"] }
screenshots = "0.8.4"
base64 = "0.22"
# Downgrade image to match what screenshots crate likely expects or use basic version
image = "0.24"
docx-rs = "0.4"
walkdir = "2.5"
sha2 = "0.10"
ammonia = "4"
keyring = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading"
] }
